--- a/strix-software/strix-software.ioc
+++ b/strix-software/strix-software.ioc
@@ -1,47 +1,119 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.CommonPathInternal=null|null|null|null
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,master,CommonPathInternal
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+FATFS.BSP.number=1
+FATFS0.BSP.STBoard=false
+FATFS0.BSP.api=Unknown
+FATFS0.BSP.component=
+FATFS0.BSP.condition=
+FATFS0.BSP.instance=PD0
+FATFS0.BSP.ip=GPIO
+FATFS0.BSP.mode=Input
+FATFS0.BSP.name=Detect_SDIO
+FATFS0.BSP.semaphore=
+FATFS0.BSP.solution=PD0
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=Timing
+I2C1.Timing=0x10909CEC
+I2C2.IPParameters=Timing
+I2C2.Timing=0x10909CEC
 KeepUserPlacement=false
 Mcu.CPN=STM32L476VET6
 Mcu.Family=STM32L4
-Mcu.IP0=NVIC
-Mcu.IP1=QUADSPI
-Mcu.IP2=RCC
-Mcu.IP3=SDMMC1
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=USB_DEVICE
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP0=ADC1
+Mcu.IP1=FATFS
+Mcu.IP10=SYS
+Mcu.IP11=USART2
+Mcu.IP12=USART3
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
+Mcu.IP2=I2C1
+Mcu.IP3=I2C2
+Mcu.IP4=NVIC
+Mcu.IP5=QUADSPI
+Mcu.IP6=RCC
+Mcu.IP7=SDMMC1
+Mcu.IP8=SPI1
+Mcu.IP9=SPI2
+Mcu.IPNb=15
 Mcu.Name=STM32L476V(C-E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PH0-OSC_IN (PH0)
-Mcu.Pin1=PH1-OSC_OUT (PH1)
-Mcu.Pin10=PA9
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA13 (JTMS-SWDIO)
-Mcu.Pin14=PA14 (JTCK-SWCLK)
-Mcu.Pin15=PC10
-Mcu.Pin16=PC11
-Mcu.Pin17=PC12
-Mcu.Pin18=PD2
-Mcu.Pin19=PB3 (JTDO-TRACESWO)
-Mcu.Pin2=PA6
-Mcu.Pin20=PB4 (NJTRST)
-Mcu.Pin21=PB5
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PA7
-Mcu.Pin4=PB0
-Mcu.Pin5=PB1
-Mcu.Pin6=PE10
-Mcu.Pin7=PE11
-Mcu.Pin8=PC8
-Mcu.Pin9=PC9
-Mcu.PinsNb=23
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PA4
+Mcu.Pin11=PA5
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PB0
+Mcu.Pin16=PB1
+Mcu.Pin17=PB2
+Mcu.Pin18=PE7
+Mcu.Pin19=PE8
+Mcu.Pin2=PH0-OSC_IN (PH0)
+Mcu.Pin20=PE9
+Mcu.Pin21=PE10
+Mcu.Pin22=PE11
+Mcu.Pin23=PE12
+Mcu.Pin24=PE13
+Mcu.Pin25=PB10
+Mcu.Pin26=PB11
+Mcu.Pin27=PB12
+Mcu.Pin28=PB13
+Mcu.Pin29=PB14
+Mcu.Pin3=PH1-OSC_OUT (PH1)
+Mcu.Pin30=PB15
+Mcu.Pin31=PD8
+Mcu.Pin32=PD9
+Mcu.Pin33=PD10
+Mcu.Pin34=PD11
+Mcu.Pin35=PD12
+Mcu.Pin36=PD13
+Mcu.Pin37=PD14
+Mcu.Pin38=PC8
+Mcu.Pin39=PC9
+Mcu.Pin4=PC2
+Mcu.Pin40=PA9
+Mcu.Pin41=PA11
+Mcu.Pin42=PA12
+Mcu.Pin43=PA13 (JTMS-SWDIO)
+Mcu.Pin44=PA14 (JTCK-SWCLK)
+Mcu.Pin45=PC10
+Mcu.Pin46=PC11
+Mcu.Pin47=PC12
+Mcu.Pin48=PD0
+Mcu.Pin49=PD2
+Mcu.Pin5=PC3
+Mcu.Pin50=PD3
+Mcu.Pin51=PD4
+Mcu.Pin52=PD5
+Mcu.Pin53=PD6
+Mcu.Pin54=PB3 (JTDO-TRACESWO)
+Mcu.Pin55=PB4 (NJTRST)
+Mcu.Pin56=PB5
+Mcu.Pin57=PB6
+Mcu.Pin58=PB7
+Mcu.Pin59=PB8
+Mcu.Pin6=PA0
+Mcu.Pin60=PB9
+Mcu.Pin61=PE0
+Mcu.Pin62=PE1
+Mcu.Pin63=VP_FATFS_VS_SDIO
+Mcu.Pin64=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=65
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476VETx
@@ -59,6 +131,14 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=Pyro_A_Voltage
+PA0.Locked=true
+PA0.Signal=ADCx_IN5
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=Pyro_B_Voltage
+PA1.Locked=true
+PA1.Signal=ADCx_IN6
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
@@ -67,6 +147,22 @@ PA13\ (JTMS-SWDIO).Mode=Serial_Wire
 PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).Mode=Serial_Wire
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=Pyro_C_Voltage
+PA2.Locked=true
+PA2.Signal=ADCx_IN7
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=Pyro_D_Voltage
+PA3.Locked=true
+PA3.Signal=ADCx_IN8
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=Pyro_F_Voltage
+PA4.Locked=true
+PA4.Signal=ADCx_IN9
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=Pyro_E_Voltage
+PA5.Locked=true
+PA5.Signal=ADCx_IN10
 PA6.Mode=Single Bank
 PA6.Signal=QUADSPI_BK1_IO3
 PA7.Mode=Single Bank
@@ -77,6 +173,28 @@ PB0.Mode=Single Bank
 PB0.Signal=QUADSPI_BK1_IO1
 PB1.Mode=Single Bank
 PB1.Signal=QUADSPI_BK1_IO0
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB11.Mode=I2C
+PB11.Signal=I2C2_SDA
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=Buzzer
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=Pyro_D_Cont_LED
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=Pyro_C_Cont_LED
+PB15.Locked=true
+PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=Pyro_A_Trigger
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Mode=Full_Duplex_Master
 PB3\ (JTDO-TRACESWO).Signal=SPI1_SCK
@@ -86,22 +204,118 @@ PB4\ (NJTRST).Signal=SPI1_MISO
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=CS_High_G
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=Low_G_Gyro_Int
+PB9.Locked=true
+PB9.Signal=GPIO_Input
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDMMC1_D2
 PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDMMC1_D3
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.Signal=SDMMC1_CK
+PC2.Mode=Full_Duplex_Master
+PC2.Signal=SPI2_MISO
+PC3.Mode=Full_Duplex_Master
+PC3.Signal=SPI2_MOSI
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=Ignition_Battery_Voltage
+PC4.Locked=true
+PC4.Signal=ADCx_IN13
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDMMC1_D0
 PC9.Mode=SD_4_bits_Wide_bus
 PC9.Signal=SDMMC1_D1
+PD0.GPIOParameters=GPIO_Label
+PD0.GPIO_Label=SD_Card_Detect
+PD0.Locked=true
+PD0.Signal=GPIO_Input
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=Pyro_B_Cont_LED
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=Pyro_A_Cont_LED
+PD11.Locked=true
+PD11.Signal=GPIO_Output
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=Pyro_E_Cont_LED
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=Pyro_F_Cont_LED
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=Status_LED
+PD14.Locked=true
+PD14.Signal=GPIO_Output
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDMMC1_CMD
+PD3.GPIOParameters=GPIO_Label
+PD3.GPIO_Label=GPS_ExtInt
+PD3.Locked=true
+PD3.Signal=GPIO_Output
+PD4.GPIOParameters=GPIO_Label
+PD4.GPIO_Label=GPS_Reset
+PD4.Locked=true
+PD4.Signal=GPIO_Output
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
+PD6.Mode=Asynchronous
+PD6.Signal=USART2_RX
+PD8.Locked=true
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
+PD9.Locked=true
+PD9.Mode=Asynchronous
+PD9.Signal=USART3_RX
+PE0.Locked=true
+PE0.Signal=GPIO_Output
+PE1.GPIOParameters=GPIO_Label
+PE1.GPIO_Label=Low_G_Accel_Int
+PE1.Locked=true
+PE1.Signal=GPIO_Input
 PE10.Mode=Single Bank
 PE10.Signal=QUADSPI_CLK
 PE11.Mode=Single Bank
 PE11.Signal=QUADSPI_NCS
+PE12.GPIOParameters=GPIO_Label
+PE12.GPIO_Label=Pyro_F_Trigger
+PE12.Locked=true
+PE12.Signal=GPIO_Output
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=Pyro_E_Trigger
+PE13.Locked=true
+PE13.Signal=GPIO_Output
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=Altimeter_Int
+PE2.Locked=true
+PE2.Signal=GPIO_Input
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=CS_Altimeter
+PE3.Locked=true
+PE3.Signal=GPIO_Output
+PE7.GPIOParameters=GPIO_Label
+PE7.GPIO_Label=Pyro_B_Trigger
+PE7.Locked=true
+PE7.Signal=GPIO_Output
+PE8.GPIOParameters=GPIO_Label
+PE8.GPIO_Label=Pyro_C_Trigger
+PE8.Locked=true
+PE8.Signal=GPIO_Output
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=Pyro_D_Trigger
+PE9.Locked=true
+PE9.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
@@ -137,7 +351,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_QUADSPI_Init-QUADSPI-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -191,17 +405,42 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=96000000
 RCC.VCOSAI2OutputFreq_Value=32000000
+SH.ADCx_IN10.0=ADC1_IN10,IN10-Single-Ended
+SH.ADCx_IN10.ConfNb=1
+SH.ADCx_IN13.0=ADC1_IN13,IN13-Single-Ended
+SH.ADCx_IN13.ConfNb=1
+SH.ADCx_IN5.0=ADC1_IN5,IN5-Single-Ended
+SH.ADCx_IN5.ConfNb=1
+SH.ADCx_IN6.0=ADC1_IN6,IN6-Single-Ended
+SH.ADCx_IN6.ConfNb=1
+SH.ADCx_IN7.0=ADC1_IN7,IN7-Single-Ended
+SH.ADCx_IN7.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8-Single-Ended
+SH.ADCx_IN8.ConfNb=1
+SH.ADCx_IN9.0=ADC1_IN9,IN9-Single-Ended
+SH.ADCx_IN9.ConfNb=1
 SPI1.CalculateBaudRate=40.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+SPI2.CalculateBaudRate=40.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_FATFS_VS_SDIO.Mode=SDIO
+VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
