Initial testing status LED and Buzzer

--- a/strix-software/strix-software.ioc
+++ b/strix-software/strix-software.ioc
@@ -21,6 +21,10 @@ FATFS0.BSP.mode=Input
 FATFS0.BSP.name=Detect_SDIO
 FATFS0.BSP.semaphore=
 FATFS0.BSP.solution=PD0
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
+FREERTOS.Tasks01=StatusLED,16,128,StartStatusLED,Default,NULL,Dynamic,NULL,NULL;StatusBuzzer,8,128,StartStatusBuzzer,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
@@ -32,20 +36,21 @@ Mcu.CPN=STM32L476VET6
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
 Mcu.IP1=FATFS
-Mcu.IP10=SYS
-Mcu.IP11=USART2
-Mcu.IP12=USART3
-Mcu.IP13=USB_DEVICE
-Mcu.IP14=USB_OTG_FS
-Mcu.IP2=I2C1
-Mcu.IP3=I2C2
-Mcu.IP4=NVIC
-Mcu.IP5=QUADSPI
-Mcu.IP6=RCC
-Mcu.IP7=SDMMC1
-Mcu.IP8=SPI1
-Mcu.IP9=SPI2
-Mcu.IPNb=15
+Mcu.IP10=SPI2
+Mcu.IP11=SYS
+Mcu.IP12=USART2
+Mcu.IP13=USART3
+Mcu.IP14=USB_DEVICE
+Mcu.IP15=USB_OTG_FS
+Mcu.IP2=FREERTOS
+Mcu.IP3=I2C1
+Mcu.IP4=I2C2
+Mcu.IP5=NVIC
+Mcu.IP6=QUADSPI
+Mcu.IP7=RCC
+Mcu.IP8=SDMMC1
+Mcu.IP9=SPI1
+Mcu.IPNb=16
 Mcu.Name=STM32L476V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -109,28 +114,36 @@ Mcu.Pin60=PB9
 Mcu.Pin61=PE0
 Mcu.Pin62=PE1
 Mcu.Pin63=VP_FATFS_VS_SDIO
-Mcu.Pin64=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin64=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin65=VP_SYS_VS_tim6
+Mcu.Pin66=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=65
+Mcu.PinsNb=67
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476VETx
 MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM6_DAC_IRQn
+NVIC.TimeBaseIP=TIM6
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=Pyro_A_Voltage
 PA0.Locked=true
@@ -254,9 +267,11 @@ PD13.GPIOParameters=GPIO_Label
 PD13.GPIO_Label=Pyro_F_Cont_LED
 PD13.Locked=true
 PD13.Signal=GPIO_Output
-PD14.GPIOParameters=GPIO_Label
+PD14.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PD14.GPIO_Label=Status_LED
+PD14.GPIO_PuPd=GPIO_PULLDOWN
 PD14.Locked=true
+PD14.PinState=GPIO_PIN_SET
 PD14.Signal=GPIO_Output
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDMMC1_CMD
@@ -351,7 +366,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_QUADSPI_Init-QUADSPI-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_QUADSPI_Init-QUADSPI-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_USART3_UART_Init-USART3-false-HAL-true,13-MX_FATFS_Init-FATFS-false-HAL-false
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -441,6 +456,10 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_SYS_VS_tim6.Mode=TIM6
+VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
