Adding USB Com handler

--- a/strix-software/strix-software.ioc
+++ b/strix-software/strix-software.ioc
@@ -23,7 +23,7 @@ FATFS0.BSP.semaphore=
 FATFS0.BSP.solution=PD0
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
-FREERTOS.Tasks01=StatusLED,16,128,StartStatusLED,Default,NULL,Dynamic,NULL,NULL;StatusBuzzer,8,128,StartStatusBuzzer,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Status,16,128,StartStatus,Default,NULL,Dynamic,NULL,NULL;USBCom,24,128,StartUSBCom,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -463,4 +463,5 @@ VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
+rtos.0.ip=FREERTOS
 isbadioc=false
